--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="script/script.js" defer></script>
-    <script src="http://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <title>JQuery</title>
   </head>
   <body>
