--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               placeholder="Enter your translation"
             />
           </div>
+          <p class="words-translated"></p>
         </div>
         <button class="check-btn">Check translation</button>
         <button class="idk-btn">I don't know</button>
